removed auto checkmark

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <div class="option">
             <label for="lowerChars" class="collection">Contains lowercase
-              <input type="checkbox" id="lowerChars" class="collection-selector" checked>
+              <input type="checkbox" id="lowerChars" class="collection-selector">
               <span class="checkmark"></span>
             </label>
           </div>
